--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-key-handler": "^1.2.0-beta.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "react-transition-group": "^2.6.1"
