--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-key-handler": "^1.2.0-beta.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
-    "react-transition-group": "^2.6.1"
+    "react-transition-group": "^2.6.1",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
